Updated the home page

--- a/Website/pages/about/about.html
+++ b/Website/pages/about/about.html
@@ -33,9 +33,8 @@
   <div class="container">
     <h4 class="my-title text-center">About</h4>
     <p>I look forward to founding this company as a part-time advent whenever time permits. I look forward to
-      working with a team that provides software solutions as well as technical support to individuals as well as
-      businesses. Perhaps, this website would settle as a portfolio website for my team's work or it might end up
-      growing into a fully-fledge face for my company; only time can tell!</p>
+      working with a team that works on holographic technology. Perhaps, this website will help people with interest in holographic
+     technology to come together and build their products.</p>
 
     <div class="carousel">
       <a class="carousel-item" href="#one!"><img
