--- a/Website/index.html
+++ b/Website/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Permanent+Marker" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="lib/materialize/css/materialize.min.css" media="screen,projection" />
-    <!-- My CSS -->
-    <link type="text/css" rel="stylesheet" href="css/comms.css" />
-    <link type="text/css" rel="stylesheet" href="css/index.css" />
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  </head>
 
-  <body>
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="lib/materialize/js/materialize.min.js"></script>
-  </body>
-</html>
+<head>
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Permanent+Marker" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="lib/materialize/css/materialize.min.css" media="screen,projection" />
+  <!-- My CSS -->
+  <link type="text/css" rel="stylesheet" href="css/comms.css" />
+  <link type="text/css" rel="stylesheet" href="css/index.css" />
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 
-<nav>
+<body>
+  <!--JavaScript at end of body for optimized loading-->
+  <script type="text/javascript" src="lib/materialize/js/materialize.min.js"></script>
+
+  <img class="img-background" src="./assets/holo.jpeg" alt="">
+
+  <nav>
     <div class="nav-wrapper">
       <!-- <a href="#" class="brand-logo pl-1">The Incredible Insider</a> -->
       <ul id="nav-mobile" class="d-flex justify-center">
@@ -31,16 +32,12 @@
         <li><a href="pages/admin/admin.php">Are you an admin?</a></li>
       </ul>
     </div>
-</nav>
+  </nav>
 
-<div class="container h-90p d-flex align-center">
-    <div class="row">
-      <div class="col s12">
-        <h2 class="text-center title">Holo Tech</h2>
-        <h5 class="text-center text-white">Only Place To Find Holographic Technology</h5>
-      </div>
-    </div>
-</div>
+  <div class="text-align-center">
+    <h2 class="text-center title">Holo Tech</h2>
+    <h5 class="text-center text-white">Only Place To Find Holographic Technology</h5>
+  </div>
 
   <!-- <script src="external/jquery/jquery.js"></script>
   <script src="jquery-ui.min.js"></script> -->
@@ -48,4 +45,3 @@
 </body>
 
 </html>
-        
